tests/query_errors/local_in_having/error.txt
Error: 
    1 | select
    2 | event
    3 | from in
    4 | into out
    5 | having a + b > 3;
      |        ^^^^^^^^^ Local variables are not allowed here
